subprojects/ere/ere/tests/ui/unbound_named_field.stderr
error: No capture group named `foo` found in the regular expression.
  --> tests/ui/unbound_named_field.rs:11:9
   |
11 |         foo: &'a str,
   |         ^^^

error[E0433]: failed to resolve: use of undeclared type `HomerSimpson`
  --> tests/ui/unbound_named_field.rs:14:13
   |
14 |     let _ = HomerSimpson::exec("J. Simpson");
   |             ^^^^^^^^^^^^ use of undeclared type `HomerSimpson`
